fix stuff found by FindBugs and PMD
most fixes are just style or performance relevant,
but those in BulkBlockObject and the one in AssocArray
fix actual logic/potentially crashing bugs.